--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,6 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/growyDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
